# migam_cppcore

./: CMakeLists.txt
Src/: CMakeLists.txt
Test/: CMakeLists.txt
Test/CommonTest/: CMakeLists.txt
Test/DummyDynamicLibrary/: CMakeLists.txt
Test/DummyProcess/: CMakeLists.txt
Test/EncoderTest/: CMakeLists.txt
Test/FormatterTest/: CMakeLists.txt
Test/ServerTest/: CMakeLists.txt
Test/StringTest/: CMakeLists.txt
Test/SystemTest/: CMakeLists.txt
Test/cmake/: TestHarness.cmake
